# rust-education-server

./: README.md  docker-compose.yml
iron-gcd/: Cargo.toml
iron-gcd/src/: add.rs  main.rs
mocks/__files/: user-response.json
mocks/mappings/: user-get.json
